...
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "エラー" } },
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Error" } }
      }
    },
    "ok_button" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "OK" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "OK" } },
        "es" : { "stringUnit" : { "state" : "translated", "value" : "Aceptar" } }
      }
    },
    "permission_microphone_title" : {
      "localizations" : {
...
